--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,20 +1,13 @@
 version: 0.2
-
 phases:
-  install:
-    commands:
-      - echo Nothing to do in the install phase...
-  pre_build:
-    commands:
-      - echo Nothing to do in the pre_build phase...
   build:
     commands:
       - echo Build started on `date`
-      - cmake jisc.cpp
-      - make jisc.cpp
+      - cmake .
+      - make .
   post_build:
     commands:
-      - echo Build completed on date
+      - echo Build completed on `date`
 artifacts:
   files:
-    - jisc.zip
+    - jisc
